--- a/flight/templates/404.html
+++ b/flight/templates/404.html
@@ -5,5 +5,5 @@
 {% block content %}
 <h1>Page not found</h1>
 
-<p>{% if exception %}{{ exception }}{% else %}This is not the page you were looking for.{% endif %}</p>
+<p>{% if exception %}{{ exception }}{% else %}These are not the droids you were looking for.{% endif %}</p>
 {% endblock content %}
