made some more changes to homepage, also added to the user model so that each user can set their preferred airport. default for right now is Logan unless otherwise stated

--- a/flight/templates/pages/home.html
+++ b/flight/templates/pages/home.html
@@ -13,6 +13,14 @@
             <select class="form-control form-control-lg">
                 <option>Destination</option>
             </select>
+            <p></p>
+            <label for="startdate">Start date</label>
+            <input type="date" id="startdate">
+            <label for="returndate">Return date</label>
+            <input type="date" id="returndate">
+            <div class="text-center">
+                <a href="https://google.com" class="btn btn-primary">Find Prices!</a>
+            </div>
           </p>
         </div>
       </section>
