--- a/flight/templates/pages/home.html
+++ b/flight/templates/pages/home.html
@@ -7,7 +7,8 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="jumbotron-heading">Welcome to Flight Price Checker!</h1>
-            <p class="lead text-muted">This is Nick Cardin's Comp705 project front page, If you're already logged in, please choose a destination. Otherwise choose both an origin point as well as a destination</p>
+            <p class="lead text-muted">This is Nick Cardin's Comp705 project front page, If you're already logged in,
+             please choose a destination. Otherwise choose both an origin point as well as a destination</p>
             <p>
             <select class="form-control form-control-lg" id ='Origin'>
                 <option value='notvalid' hidden>Point of Origin</option>
@@ -20,7 +21,7 @@
             </select>
             {% if user.is_authenticated %} 
                 <script>
-                    document.getElementById("Origin").options.selectedValue = {{user.defaultAirport}};
+                    document.getElementById("Origin").value = {{user.defaultAirport}}.value;
             
                 </script>
             {% else %}
