--- a/flight/templates/pages/result.html
+++ b/flight/templates/pages/result.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>Welcome to the flight checker test!</p>
+{{table |safe}}
 {% endblock content %}
