made the table a bit more pretty by replacing the table class with one from bootstrap, should appear more slim and is highlightable as you mouse over it

--- a/flight/templates/pages/about.html
+++ b/flight/templates/pages/about.html
@@ -1,1 +1,5 @@
 {% extends "base.html" %}
+
+    {% block content %}
+        <p style ="left:auto">Welcome to the flight checker2!</p>
+    {% endblock content %}
