--- a/flight/templates/pages/result.html
+++ b/flight/templates/pages/result.html
@@ -1,5 +1,23 @@
 {% extends "base.html" %}
+{% load static i18n %}
+
+{% block css %}
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="{% static 'css/marginfix.css' %}" rel="stylesheet">
+    <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    {% endblock %}
+
+{% block inline_javascript %}
+<script>
+    var els = document.getElementsByClassName('dataframe'),
+        i = els.length;
+    console.log(els)
+    while (i--) {
+        els[i].className = 'table table-sm table-hover';
+    }
+</script>
+{% endblock inline_javascript %}
 
 {% block content %}
-{{table |safe}}
+{{table| safe}}
 {% endblock content %}
