added task to tasks.md that i also added to issues as the previous task i had a lot of work under encompassed a lot

--- a/flight/templates/pages/about.html
+++ b/flight/templates/pages/about.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
     {% block content %}
-        <p style ="left:auto">Welcome to the flight checker2!</p>
+        <p>Welcome to the flight checker! This page will be filled out eventually explaining the project and how to read the table</p>
     {% endblock content %}
