--- a/flight/templates/pages/home.html
+++ b/flight/templates/pages/home.html
@@ -10,18 +10,17 @@
             <p>
             <form action="/result/" method="post" id='myForm'>
                 {% csrf_token %}
+                
                 <select class="form-control form-control-lg" id ='Origin' name='Origin'>
                     <option value='notvalid' hidden>Point of Origin</option>
-                    <option value='ATL' id='ATL'>ATL</option>
-                    <option value='LAX' id='LAX'>LAX</option>
-                    <option value='JFK' id='JFK'>JFK</option>
-                    <option value='BOS' id='BOS'>BOS</option>
-                    <option value='MCO' id='MCO'>MCO</option>
+                    {% for x, y in user.Airport %}
+                        <option value="{{ x }}">{{ y }}</option>
+                    {% endfor %}
 
                 </select>
                 {% if user.is_authenticated %} 
                     <script>
-                        document.getElementById("Origin").value = {{user.defaultAirport}}.value;
+                        document.getElementById("Origin").value = "{{user.defaultAirport}}";
                 
                     </script>
                 {% else %}
@@ -29,11 +28,9 @@
                 <br>
                 <select class="form-control form-control-lg" id ='Dest' name='Dest'>
                     <option value='notvalid' hidden>Destination</option>
-                    <option value='ATL' id='ATL'>ATL</option>
-                    <option value='LAX' id='LAX'>LAX</option>
-                    <option value='JFK' id='JFK'>JFK</option>
-                    <option value='BOS' id='BOS'>BOS</option>
-                    <option value='MCO' id='MCO'>MCO</option>
+                    {% for x, y in user.Airport %}
+                        <option value="{{ x }}">{{ y }}</option>
+                    {% endfor %}
                 </select>
                 <br>
                 <label for="startdate">Start date</label>
