lot of work trying to figure out how to put in data that isnt really meant to be changed since i found out that by keeping the model for airports inside user, you ouldnt choose anything unless you were logged in, so making a model for airports and an app for it on its own and found out how to use fixtures to populate the model with the airports and airport codes

--- a/flight/templates/pages/home.html
+++ b/flight/templates/pages/home.html
@@ -13,7 +13,7 @@
                 
                 <select class="form-control form-control-lg" id ='Origin' name='Origin'>
                     <option value='notvalid' hidden>Point of Origin</option>
-                    {% for x, y in user.Airport %}
+                    {% for x, y in Airports.myAirport.choices %}
                         <option value="{{ x }}">{{ y }}</option>
                     {% endfor %}
 
@@ -21,6 +21,7 @@
                 {% if user.is_authenticated %} 
                     <script>
                         document.getElementById("Origin").value = "{{user.defaultAirport}}";
+                        console.log({{Airport.myAirport}})
                 
                     </script>
                 {% else %}
@@ -28,7 +29,7 @@
                 <br>
                 <select class="form-control form-control-lg" id ='Dest' name='Dest'>
                     <option value='notvalid' hidden>Destination</option>
-                    {% for x, y in user.Airport %}
+                    {% for x, y in Airports.Airports %}
                         <option value="{{ x }}">{{ y }}</option>
                     {% endfor %}
                 </select>
